--- a/01_datacleaning.ipynb
+++ b/01_datacleaning.ipynb
@@ -338,12 +338,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "train.to_csv('./data/train_clean.csv', index = False)\n",
-    "train.to_csv('./data/test_clean.csv', index = False)"
+    "test.to_csv('./data/test_clean.csv', index = False)"
    ]
   },
   {
