--- a/00_eda.ipynb
+++ b/00_eda.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This notebook is basically scratch paper.  We were just playing around with the data and seeing what is there.  Additionally, we tested different methods and functions to see what they would do on this data.  Everything that we used to clean and process the data was copied to 01_datacleaning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {},
@@ -914,7 +921,6 @@
    "outputs": [],
    "source": [
     "train['text'] = train['text'].str.lower()\n",
-    "\n",
     "train['keyword'] = train['keyword'].str.lower()"
    ]
   },
