--- a/01_datacleaning.ipynb
+++ b/01_datacleaning.ipynb
@@ -30,6 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lower casing all the text for some processing\n",
+    "# Removing the NA's from the keyword to filter and replace later\n",
     "train['text'] = train['text'].str.lower()\n",
     "train['keyword'] = train['keyword'].str.lower()\n",
     "train['keyword'].fillna('-', inplace=True)\n",
@@ -45,6 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is removing all the URLs from the tweets.\n",
+    "# Basically all of them are t.co/ URLs which are shortened and \n",
+    "# are mostly broken now.  \n",
+    "\n",
     "# Using this string remover from StackOverflow: \n",
     "# https://stackoverflow.com/questions/11331982/how-to-remove-any-url-within-a-string-in-python\n",
     "train['text_nourl'] = [re.sub(r'\\w+:\\/{2}[\\d\\w-]+(\\.[\\d\\w-]+)*(?:(?:\\/[^\\s/]*))*', '', i) for i in train['text']]\n",
@@ -57,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing the %20 from the keyword and making it a space\n",
     "train['keyword'] = train['keyword'].str.replace('%20', ' ')\n",
     "test['keyword'] = test['keyword'].str.replace('%20', ' ')"
    ]
@@ -76,6 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filling in most of the empty keys by using the existing keys \n",
+    "# and checking which are in the tweet\n",
     "def fill_keys(df):\n",
     "    no_key = df.loc[df['keyword'] == '-']\n",
     "    for index, row in no_key.iterrows():\n",
@@ -92,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stemming keywords since many were similar\n",
     "snowstem = SnowballStemmer('english')\n",
-    "\n",
     "train['keywords_stemmed'] = train['keyword'].map(lambda x: snowstem.stem(x))\n",
     "test['keywords_stemmed'] = test['keyword'].map(lambda x: snowstem.stem(x))\n"
    ]
