--- a/03_modeling.ipynb
+++ b/03_modeling.ipynb
@@ -149,6 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "y = train['target']\n",
     "X = train[['text_nourl', 'keywords_stemmed']]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
@@ -159,59 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cvec = CountVectorizer()\n",
-    "tfidf = TfidfVectorizer()\n",
-    "\n",
-    "X_train_cv = cvec.fit_transform(X_train['keywords_stemmed'])\n",
-    "\n",
-    "mnb_cv = MultinomialNB()\n",
-    "mnb_cv.fit(X_train_cv, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_tfidf = tfidf.fit_transform(X_train['keywords_stemmed'])\n",
-    "mnb_tf = MultinomialNB()\n",
-    "mnb_tf.fit(X_train_tfidf, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# inspiration from https://stackoverflow.com/questions/38555650/try-multiple-estimator-in-one-grid-search\n",
+    "# Trying both Count and Tfidf Vectorizers\n",
+    "# Trying 7 different models\n",
+    "# Have nest loops to run all 14 combinations and \n",
+    "# build a DataFrame of the results including the model\n",
+    "# Just used default parameters here to dial in some models then will\n",
+    "# Gridsearch parameters next\n",
     "\n",
     "vects = {\n",
     "    'cvec' : CountVectorizer(),\n",
@@ -252,6 +211,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Built the above into a function to reuse.  \n",
+    "# This train, test, splits the data the same every time\n",
+    "# This makes it easier to pass in fewer parameters\n",
+    "\n",
     "def modeling(X, y):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
     "                                                    random_state=42, \n",
@@ -484,6 +447,7 @@
     }
    ],
    "source": [
+    "#Results of using the text from the tweet\n",
     "models_text = modeling(X['text_nourl'], y)\n",
     "models_text"
    ]
@@ -698,6 +662,7 @@
     }
    ],
    "source": [
+    "# Calculating the difference between test and train scores\n",
     "models_text['delta'] = models_text['train_score'] - models_text['test_score']\n",
     "models_text.sort_values('delta')"
    ]
@@ -719,6 +684,8 @@
     }
    ],
    "source": [
+    "# Setting up gridsearch parameters for the vectorizer and the models\n",
+    "\n",
     "vec_params = [\n",
     "    {'vec__ngram_range' : [(1,1), (1,2)]},\n",
     "    {'vec__stop_words' : [None, 'english']}\n",
@@ -757,7 +724,10 @@
     }
    ],
    "source": [
-    "%%time\n",
+    "# This intentional misspelling of model function loops the \n",
+    "# Vectorizers and Models again, but this time they get gridsearched\n",
+    "# according to the parameters above\n",
+    "\n",
     "def modl(X, y):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
     "                                                    random_state=42, \n",
@@ -925,6 +895,7 @@
     }
    ],
    "source": [
+    "# Running it on keywords\n",
     "models_keys_gs = modl(X['keywords_stemmed'],y)\n",
     "models_keys_gs"
    ]
@@ -1069,6 +1040,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saving what we deemed as the best model for this\n",
     "best_model = models_keys_gs.loc[6,'model']"
    ]
   },
@@ -1202,6 +1174,7 @@
     }
    ],
    "source": [
+    "# Running it for the text of the tweets and saving it\n",
     "models_text_gs = modl(X['text_nourl'], y)\n",
     "models_text_gs['delta'] = models_text_gs['train_score'] - models_text_gs['test_score']\n",
     "models_text_gs"
@@ -1209,138 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>keywords_train</th>\n",
-       "      <th>keywords_test</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cvec + knn</td>\n",
-       "      <td>0.722719</td>\n",
-       "      <td>0.727941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>cvec + logreg</td>\n",
-       "      <td>0.729550</td>\n",
-       "      <td>0.733718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cvec + rf</td>\n",
-       "      <td>0.729725</td>\n",
-       "      <td>0.734769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cvec + adaboost</td>\n",
-       "      <td>0.722719</td>\n",
-       "      <td>0.735819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tfidf + knn</td>\n",
-       "      <td>0.725171</td>\n",
-       "      <td>0.732143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>tfidf + logreg</td>\n",
-       "      <td>0.729550</td>\n",
-       "      <td>0.735819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>tfidf + rf</td>\n",
-       "      <td>0.729725</td>\n",
-       "      <td>0.736870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>tfidf + adaboost</td>\n",
-       "      <td>0.725871</td>\n",
-       "      <td>0.733718</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               name  keywords_train  keywords_test\n",
-       "0        cvec + knn        0.722719       0.727941\n",
-       "1     cvec + logreg        0.729550       0.733718\n",
-       "2         cvec + rf        0.729725       0.734769\n",
-       "3   cvec + adaboost        0.722719       0.735819\n",
-       "4       tfidf + knn        0.725171       0.732143\n",
-       "5    tfidf + logreg        0.729550       0.735819\n",
-       "6        tfidf + rf        0.729725       0.736870\n",
-       "7  tfidf + adaboost        0.725871       0.733718"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scores = models_keys_gs[['name', 'train_score', 'test_score']].copy()\n",
-    "scores.rename(columns={'train_score' : 'keywords_train', 'test_score' : 'keywords_test'}, inplace=True)\n",
-    "scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model_tx = models_text_gs.loc[6,'model']\n",
-    "preds = best_model_tx.predict(X_test['text_nourl'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1452,15 +1294,28 @@
        "7  tfidf + adaboost        0.725871       0.733718    0.801191   0.769958"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Building a table of all the scores for each model and test/train scores\n",
+    "scores = models_keys_gs[['name', 'train_score', 'test_score']].copy()\n",
+    "scores.rename(columns={'train_score' : 'keywords_train', 'test_score' : 'keywords_test'}, inplace=True)\n",
     "scores['text_train'] = models_text_gs['train_score']\n",
     "scores['text_test'] = models_text_gs['test_score']\n",
     "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_tx = models_text_gs.loc[6,'model'] #Saving best model\n",
+    "preds = best_model_tx.predict(X_test['text_nourl'])"
    ]
   },
   {
@@ -1469,6 +1324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Trying to dial in further on what we deemed the best model again\n",
     "pipe_tf = Pipeline([\n",
     "    {'tfvec' : TfidfVectorizer()},\n",
     "    {'rf' : RandomForestClassifier()}\n",
@@ -1488,20 +1344,6 @@
     "print(gs_rf.best_score_)\n",
     "gs_rf_best = gs_rf.best_estimator_"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1616,41 +1458,37 @@
     }
    ],
    "source": [
+    "# Kaggle submission creation\n",
     "test = pd.read_csv('./data/test_clean.csv')\n",
-    "test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "preds = best_model_tx.predict(test['text_nourl'])\n",
     "pred_1 = pd.DataFrame()\n",
     "pred_1['id'] = test['id']\n",
-    "pred_1['target'] = preds\n",
+    "pred_1['target'] = pred\n",
     "pred_1.to_csv('./data/submissions/rftext.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3263, 6)"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test.shape"
+    "# Kaggle submission creation\n",
+    "def kagg_sub (model, Xtest, name):\n",
+    "    preds = model.predict(Xtest)\n",
+    "    outp = pd.DataFrame()\n",
+    "    outp['id'] = test['id']\n",
+    "    outp['target'] = preds\n",
+    "    outp.to_csv(f'./data/submissions/{name}.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kagg_sub(best_model, test['keywords_stemmed'], 'keywords1')"
    ]
   },
   {
